<resources>
    <string name="app_name">HospitalApp</string>
    <string name="action_settings">Settings</string>
    <!--<string name="game">游戏</string>
    <string name="video">影视点播</string>
    <string name="comp">单位介绍</string>
    <string name="famous">名家汇</string>
    <string name="check">费用查询</string>
    <string name="mall">商城</string>-->

    <string name="game">Game</string>
    <string name="video">Video</string>
    <string name="comp">Comp</string>
    <string name="famous">Famous</string>
    <string name="check">Check</string>
    <string name="mall">Mall</string>

</resources>
