<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="3dp"
    tools:context="com.example.seafooler.hospitalapp.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="2.5"
        >

        <RelativeLayout
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/game"
            android:layout_margin="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:text="@string/game"
                android:textColor="@color/white"
                android:layout_marginBottom="50dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/video"
            android:layout_margin="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:text="@string/video"
                android:textColor="@color/white"
                android:layout_marginBottom="50dp"/>
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="2">

        <RelativeLayout
            android:id="@+id/comp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/comp"
            android:layout_margin="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:text="@string/comp"
                android:textColor="@color/white"
                android:layout_marginBottom="90dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/famous"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/famous"
            android:layout_margin="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:text="@string/famous"
                android:textColor="@color/white"
                android:layout_marginBottom="90dp"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="2.5">

        <RelativeLayout
            android:id="@+id/mall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mall"
            android:layout_margin="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:text="@string/mall"
                android:textColor="@color/white"
                android:layout_marginBottom="50dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/check"
            android:layout_margin="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:text="@string/check"
                android:textColor="@color/white"
                android:layout_marginBottom="50dp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>


